--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 fnv = "1.0"
+geo = "0.32.0"
 itertools = "0.14"
 ndarray = { version = "0.17.1", features = ["rayon"] }
 ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
